--- a/src/styles.css
+++ b/src/styles.css
@@ -26,10 +26,10 @@ body,
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-.logo {
+.header {
   font-size: 45px;
   line-height: 60px;
-  background-color: darkslateblue;
+  background-color: rgb(80, 70, 145);
   text-align: center;
   font-family: 'Modak', cursive;
   text-shadow: 1px 1px 1px white;
@@ -38,7 +38,7 @@ body,
 
 .to_do_list {
   height: calc(100% - 120px);
-  background-color: darkcyan;
+  background-color: rgb(239, 247, 247);
   overflow-y: auto;
 }
 
@@ -51,43 +51,50 @@ body,
   align-items: center;
 }
 
-.to_do_list .paragraph:nth-child(3n) {
+.to_do_list .paragraph:nth-child(5n) {
   background-color: rgb(237, 237, 252);
 }
 
-.to_do_list .paragraph:nth-child(3n-1) {
-  background-color: rgb(247, 225, 225);
+.to_do_list .paragraph:nth-child(5n-1) {
+  background-color: rgb(255, 255, 240);
 }
 
-.to_do_list .paragraph:nth-child(3n-2) {
+.to_do_list .paragraph:nth-child(5n-2) {
   background-color: rgb(226, 245, 226);
 }
 
-.to_do_list .status {
+.to_do_list .paragraph:nth-child(5n-3) {
+  background-color: rgb(255, 230, 251);
+}
+
+.to_do_list .paragraph:nth-child(5n-4) {
+  background-color: rgb(255, 225, 231);
+}
+
+.to_do_list .button_check {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  cursor: pointer;
 }
 
-.to_do_list .status_check {
+.to_do_list .button_checked {
   border: 1px solid lightgreen;
 }
 
-.to_do_list .status_no_check {
+.to_do_list .button_no_checked {
   border: 1px solid lightgrey;
 }
 
-.to_do_list .status_img {
+.to_do_list .button_check .img {
   display: none;
   width: inherit;
 }
 
-.to_do_list .status_img_check {
+.to_do_list .button_check .img_checked {
   display: block;
 }
 
-.to_do_list .status_img_no_check {
+.to_do_list .button_check .img_no_checked {
   display: none;
 }
 
@@ -100,21 +107,20 @@ body,
   word-wrap: break-word;
 }
 
-.to_do_list .text_check {
+.to_do_list .text_checked {
   opacity: 0.5;
   text-decoration: line-through;
 }
 
-.to_do_list .delete {
+.to_do_list .button_delete {
   width: 30px;
-  cursor: pointer;
 }
 
-.to_do_list .delete_img {
+.to_do_list .button_delete .img {
   width: inherit;
 }
 
-.input_fix_container {
+.footer {
   background-color: darkslategrey;
   height: 60px;
   display: flex;
@@ -123,7 +129,7 @@ body,
   justify-content: center;
 }
 
-.input_fix_container .input {
+.footer .input {
   width: 95%;
   height: 45px;
   border-radius: 5px;
@@ -132,18 +138,11 @@ body,
   padding: 0 10%;
 }
 
-.input_fix_container .input::placeholder {
+.footer .input::placeholder {
   font-size: 25px;
   text-align: center;
 }
 
-.input_fix_container .input:focus {
+.footer .input:focus {
   border: 1px solid black;
-}
-
-@media (max-width: 736px) {
-  .to_do_list .status,
-  .to_do_list .delete {
-    cursor: auto;
-  }
 }
